--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -29,7 +29,10 @@
         display: grid;
         width: 100%;
         grid-template-columns: repeat(4, 1fr);
-        grid-column-gap: calc($magic-number / 4);
+        
+        @include for-laptop-sm-and-up {
+            grid-column-gap: calc($magic-number / 4);
+        }
 
         .col {
             &--home {
@@ -77,7 +80,7 @@
     .links {
         a {
             text-decoration: none;
-            font-size: 1.6rem;
+            font-size: 1.4rem;
 
             @include for-tablet-and-up {
                 font-size: 1.8rem;
